# -SO1-_202110509

./: LICENSE  README.md
Proyecto1/: README.md  start_project.sh
Proyecto1/contenedores/: README.md  create.sh  create_containers.sh  server.py
Proyecto1/kernel/: .Module.symvers.cmd  .modules.order.cmd  .sysinfo.ko.cmd  .sysinfo.mod.cmd  .sysinfo.mod.o.cmd  .sysinfo.o.cmd  sysinfo.c  sysinfo.ko  sysinfo.mod  sysinfo.mod.c
Proyecto1/kernel_module/: .Module.symvers.cmd  .modules.order.cmd  .sysinfo.ko.cmd  .sysinfo.mod.cmd  .sysinfo.mod.o.cmd  .sysinfo.o.cmd  Makefile  README.md  sysinfo.c  sysinfo.ko  sysinfo.mod  sysinfo.mod.c
Proyecto1/rust/: Cargo.toml
Proyecto1/rust/logs_data/: logs.json
Proyecto1/rust/src/: Dockerfile  Dockerfile.logs  docker-compose.yml  docker.rs  logs.rs  main.py  main.rs  main_noModulado.rs  metrics.rs  signal_handler.rs
Proyecto1/rust/src/logs_data/: logs.json
Proyecto1/rust_service/gestor_contenedores/: Cargo.toml
Proyecto2/: README.md  comandos_resumen.md
Proyecto2/api_go/: go.mod  go.sum
Proyecto2/api_go/grpc/: Dockerfile  docker-compose.yml  grpc_server.go
Proyecto2/api_go/http/: Dockerfile  main.go
Proyecto2/api_go/kafka_consumer/: Dockerfile  main.go
Proyecto2/api_go/proto/: service.pb.go  service_grpc.pb.go
Proyecto2/api_go/rabbitmq_consumer/: Dockerfile  main.go
Proyecto2/api_rust/: Cargo.toml  Dockerfile
Proyecto2/dashboard_grafana/: Calificacion.json
Proyecto2/locust/: locustfile.py
Proyecto2/manifiestos/: grafana.yaml  grpc.yaml  rabbitmq-consumer.yaml  redis.yaml
Proyecto2/proto/: service.proto
(+25 files in other folders)
