[package]
name = "gestor_contenedores"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4"
bollard = "0.10.0"
tokio = { version = "1", features = ["full"] }